--- a/ide/packages/idepackager/Makefile.fpc
+++ b/ide/packages/idepackager/Makefile.fpc
@@ -2,7 +2,7 @@
 #
 #   Makefile.fpc for IdePackager 1.0
 #
-#   This file was generated on 11/04/2024
+#   This file was generated on 28.02.2026
 
 [package]
 name=idepackager
@@ -10,7 +10,7 @@ version=1.0
 
 [compiler]
 unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)
-unitdir=. ../../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../../../components/lazdebuggers/lazdebuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../../../components/lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) ../../../components/buildintf/units/$(CPU_TARGET)-$(OS_TARGET) ../../../components/codetools/units/$(CPU_TARGET)-$(OS_TARGET) ../../../components/debuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../../../components/freetype/lib/$(CPU_TARGET)-$(OS_TARGET) ../ideconfig/lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../../../lcl/units/$(CPU_TARGET)-$(OS_TARGET) ../../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../../../components/lazcontrols/lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../../../components/ideintf/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../ideutils/lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)
+unitdir=. ../../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../../../components/lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) ../../../components/buildintf/units/$(CPU_TARGET)-$(OS_TARGET) ../../../components/codetools/units/$(CPU_TARGET)-$(OS_TARGET) ../../../components/freetype/lib/$(CPU_TARGET)-$(OS_TARGET) ../../../components/lazdebuggers/lazdebuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../../../components/debuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../../../lcl/units/$(CPU_TARGET)-$(OS_TARGET) ../ideconfig/lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../../../components/lazcontrols/lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../../../components/ideintf/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../ideutils/lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)
 options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq -dLCL -dLCL$(LCL_PLATFORM) $(DBG_OPTIONS)
 
 [target]
